--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -7,11 +7,7 @@ resources:
 
 images:
 - name: example-addon-image
-  newName: quay.io/haoqing/resource-usage-collect-addon
+  newName: zheshen/resource-usage-collect-addon
   newTag: latest
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-configMapGenerator:
-- literals:
-  - IMAGE_NAME=quay.io/haoqing/resource-usage-collect-addon:latest
-  name: image-config
